# real-time-app

./: README.md.txt  ai_studio_code.txt  pyproject.toml
.github/workflows/: main.yml
build-spec/: buildozer.spec  desktop.spec
src/app_core/: __init__.py  state_manager.py
src/app_core/analytics/: __init__.py  aggregator.py
src/app_core/networking/: __init__.py  manager.py
src/app_core/networking/adapters/: __init__.py  base.py  binance.py  bitget.py  bitstamp.py  bitvavo.py  coinbase.py  kraken.py  manager.py  okx.py
src/app_core/services/: __init__.py  publisher.py
src/schemas/: market_data.proto  market_data_pb2.py
src/ui_desktop/: __init__.py  chart_widget.py  controller.py  main.py  main_window.py
src/ui_mobile/: __init__.py  controller.py  cryptochart.kv  main.py  screens.py
tests/: __init__.py  test_aggregator.py
