[tool.poetry]
name = "cryptochart"
version = "0.1.0"
description = "High-performance, real-time, cross-platform crypto charting client."
authors = ["Principal Software Engineer <gemini@google.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
# ** FIX **: Changed from ^3.11 to ~3.11 to be more specific and avoid
# resolver conflicts with PySide6's upper version bounds.
python = "~3.11"
# Core
numpy = "^1.26.4"
pydantic = "^2.7.1"
websockets = "^12.0"
httpx = "^0.27.0"
aiolimiter = "^1.1.0"
aiofiles = "^23.2.1"
protobuf = "^4.25.3"
orjson = "^3.10.3"
keyring = "^25.2.1"
backoff = "^2.2.1"
# Desktop UI
PySide6 = {version = "^6.7.0", optional = true}
pyqtgraph = {version = "^0.13.4", optional = true}
# Mobile UI
kivy = {version = "^2.3.0", optional = true}
kivy-garden = {version = "^0.1.5", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
types-protobuf = "^5.26.0.20240426"
pip-audit = "^2.7.3"
# Build
pyinstaller = "^6.7.0"
buildozer = "^1.5.0"
# Protobuf compiler
grpcio-tools = "^1.64.1"

[tool.poetry.extras]
desktop = ["PySide6", "pyqtgraph"]
mobile = ["kivy", "kivy-garden"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "C90", "N", "UP", "B", "A", "COM", "S", "T20"]
ignore = ["COM812"]

[tool.mypy]
# ** FIX **: Set the python_version to 3.11 to match the new constraint.
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = true
exclude = ['src/schemas/market_data_pb2.py'] # Ignore generated file

[tool.pytest.ini_options]
asyncio_mode = "auto"